Oric still offers the potion after starting quest to kill Hosh-Pak.
Orlan can be given the wine only after asking who he is.
Parcival can be asked about Diego only after asking about scrapers in general.
Pardos can be given a potion of pure life energy for a greater reward.
Pardos can be offered a potion or stew more than once.
Parlan's dialog has 3 more previously unused dialogue lines for when NH keeps distracting novices.
Peck and Vanja are now properly caught with pants down.
Pedro cannot be asked about life in the monastery if NH is magician.
Pepe's dialog for buying a sheep is only available if NH knows he needs one and is not part of any guild yet.
Ramirez shows two dialogue options only after he sees the thieves' signal.
Randolph always drinks the medicine when it is given to him.
Randolph drinks only beer during his drinking contest.
Randolph gives the experience bonus for winning Rukhar in the drinking competition, instead of Orlan.
Randolph runs away from the bandits on the bridge and avoids fighting them.
Raoul turns toward Sentenza when he calls for him.
Regis will tell the whole story of Bosper's bow thief, if talking to him after the bow was returned.
Rengaru runs much further when confronted and if not caught will return to his regular spot.
Rengaru will move to another location when threatened with prisonment.
Rethon will only work with Jan after givent he permission from Garond.
Riordian mentions William in the initial dialogue instead of the dialogue about the west.
Rosi can only be asked about Bengar's farm if NH has not yet spoken with Bengar.
Rosi will not create extra gold in her inventory when giving the reward to NH for escorting her.
Rukhar drinks only beer during his drinking contest.
Rupert can only be asked where Matteo can be found if NH did not find him yet.
Salandril can be commented about fake mining shares before knowing he is behind it.