@@ -319,6 +319,8 @@ Orlan can be given the wine only after asking who he is.
 Parcival can be asked about Diego only after asking about scrapers in general.
 Pardos can be given a potion of pure life energy for a greater reward.
 Pardos can be offered a potion or stew more than once.
+Parlan initiates dialog with non-monastery members for their first interaction.
+Parlan eventually gives the key to mercenary/dragon hunter NH in his dialog, instead of spawning it in front of the library door.
 Parlan's dialog has 3 more previously unused dialogue lines for when NH keeps distracting novices.
 Peck and Vanja are now properly caught with pants down.
 Pedro cannot be asked about life in the monastery if NH is magician.
